kuma/namespace-sidecar-injection.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default
  annotations:
    kuma.io/sidecar-injection: "enabled"
